<resources>
    <string name="app_name">Προσφορές</string>
    <string name="shopReg">"<u>Θέλω να εγγράψω την επιχείρηση μου</u> "</string>
    <string name="usrReg">" <u>Θέλω να εγγραφώ ως πελάτης</u> "</string>
    <string name="welcome">Καλωσήρθες στις προσφορες βρες και εσύ τις καλύτερες εκπτώσεις!!</string>
    <string name="e_mail">e-Mail</string>
    <string name="password">Κωδικος Προσβασης</string>
    <string name="createAccount">Δεν έχεις Λογαριασμό; Δημιούργησε τώρα</string>
    <string name="login">Συνδεση</string>
    <string name="selectRoleRegister">Για να συνεχίσεις με την εγγραφή σου πρέπει να επιλέξεις ένα από τα παρακάτω</string>
    <string name="firstName">Ονομα</string>
    <string name="lastName">Επωνυμο</string>
    <string name="registerCustomerMsg">Καλωσήρθες στο DiscountFinder κανε και εσύ τώρα εγγραφή και βρες τις καλύτερες εκπτώσεις τώρα!,μην χάνεις άλλο χρόνο!!</string>
    <string name="register">Εγγραφη</string>
    <string name="registerSellerMsg">Για να εγγράψεις το κατάστημα σου συμπλήρωσε την παρακάτω φόρμα</string>
    <string name="brand">Επωνυμία</string>
    <string name="shops">Καταστηματα</string>
    <string name="about">About</string>
    <string name="welcomeSeller">Hello user, your shops are below</string>
    <string name="addStore">add new store</string>
    <string name="selectADiscount">Πατήστε πάνω σε μία προσφορά για να δείτε λεπτομέρειες</string>
    <string name="findDiscount">Βρες την προσφορά που θες τώρα</string>
    <string name="category">Κατηγορία</string>
    <string name="price">Τιμή</string>
    <string name="Add">Προσθήκη</string>
    <string name="myShops">Τα καταστηματα μου</string>
    <string name="settings">ΡΥΘΜΙΣΕΙΣ</string>
    <string name="enableSeller">Καταστηματάρχης</string>
    <string name="searchDiscount">Ψαξε τωρα για νεες προσφορες</string>
    <string name="myOffers">Οι προσφορές μου</string>
    <string name="shop">Κατάστημα </string>
    <string name="ShortDescription">Περιγραφη</string>
    <string name="shopName">Μαγαζι</string>
    <string name="Price">Τιμη</string>
    <string name="GOOGLE_MAPS_API_KEY">AIzaSyCnjNNPviOid3FOGAlKCZcjzD8IGrNX_B0</string>
    <string name="title_activity_choose_store_location">Map</string>
    <string name="giveShopName">Give shop name</string>
    <string name="chooseLocation">Choose shop location from maps</string>
    <string name="shopCity">Shop city</string>
    <string name="changeShopName">Change shop name</string>
    <string name="changeShopLocation">Change shop location</string>
    <string name="changeShopDescription">Change shop description</string>
    <string name="insert">INSERT</string>
    <string name="update">UPDATE</string>
    <string name="cancel">Cancel</string>
    <string name="storeName">Όνομα:</string>
    <string name="delete">Διαγραφή</string>
    <string name="choosePreferenceId">Βαλε το id της προτιμησης σου παρακάτων</string>
    <string name="id">id</string>
    <string name="distance">Απόσταση :</string>
    <string name="discount">Προσφορά :</string>
    <string name="image">Εικόνα :</string>
    <!-- String arrays for spinners    -->
    <string-array name="categories">
        <item>Ρούχα</item>
        <item>Παπούτσια</item>
        <item>Τρόφιμα</item>
        <item>Άλλα</item>
    </string-array>
    <string name="title_activity_customer_menu">CustomerMenu</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

</resources>
